src/main/java/com/example/solid/ocp/negative/GreetingType.java
package com.example.solid.ocp.negative;

public enum GreetingType {
    FORMAL,
    CASUAL,
    LOVE
}
